force-app/main/default/objects/CaseTeamAssignment__c/CaseTeamAssignment__c.object-meta.xml
<CustomObject>
    <description>Many-to-many relationship between PUC Case and Case Team Member. When a record of this object is inserted, it gives access to a PUC Case based on CaseTeamMember.Access__c.</description>
    <label>Case Team Assignment</label>
    <nameField>
        <displayFormat>CTA-{000000}</displayFormat>
        <label>Case Team Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Team Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>