force-app/main/default/objects/CaseTeamAssignment__c/fields/Access__c.field-meta.xml
<CustomField>
    <fullName>Access__c</fullName>
    <description>These values need to match the values for every Share object (i.e. &apos;Read&apos;, &apos;Edit&apos;)</description>
    <label>Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CaseTeamAccess</valueSetName>
    </valueSet>
</CustomField>