force-app/main/default/objects/CaseTeamAssignment__c/fields/UserEmail__c.field-meta.xml
<CustomField>
    <fullName>UserEmail__c</fullName>
    <formula>User__r.Email</formula>
    <label>User Email</label>
    <type>Text</type>
</CustomField>