force-app/main/default/objects/CaseTeamAssignment__c/validationRules/User_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>User_is_Required</fullName>
    <active>true</active>
    <description>unable to make User lookup field required, so we need a validation rule</description>
    <errorConditionFormula>ISBLANK( User__c )</errorConditionFormula>
    <errorDisplayField>User__c</errorDisplayField>
    <errorMessage>A User is required to save this record</errorMessage>
</ValidationRule>